--- a/Chat/src/Console/Client/sample.fxml
+++ b/Chat/src/Console/Client/sample.fxml
@@ -3,20 +3,30 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox alignment="center" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Console.Client.Controller">
 
-    <HBox fx:id="authPanel" managed="true" visible="true">
-        <TextField fx:id="loginField" promptText="login" HBox.hgrow="ALWAYS" />
-        <PasswordField fx:id="passwordField" onAction="#tryToAuth" promptText="password" HBox.hgrow="ALWAYS" />
-        <Button minWidth="50" onAction="#tryToAuth" text="auth" />
+<VBox fx:controller="Console.Client.Controller"
+      xmlns:fx="http://javafx.com/fxml" alignment="center">
+
+    <HBox fx:id="authPanel" visible="true" managed="true">
+        <TextField fx:id="loginField" promptText="login" HBox.hgrow="ALWAYS"/>
+        <PasswordField fx:id="passwordField" promptText="password" HBox.hgrow="ALWAYS"
+                       onAction="#tryToAuth"/>
+        <Button text="auth" onAction="#tryToAuth" minWidth="50"/>
+        <Button text="reg" onAction="#registration" minWidth="50"/>
+    </HBox>
+
+    <HBox VBox.vgrow="ALWAYS">
+        <TextArea fx:id="textArea" HBox.hgrow="ALWAYS" editable="false" wrapText="true"/>
+        <ListView fx:id="clientList" visible="false" managed="false" minWidth="50"
+                  onMouseClicked="#clickClientList"
+        />
     </HBox>
 
 
-    <TextArea fx:id="textArea" editable="false" VBox.vgrow="ALWAYS" />
-
-    <HBox fx:id="msgPanel" managed="false" visible="false">
-        <TextField fx:id="textField" onAction="#sendMsg" promptText="input message" HBox.hgrow="ALWAYS" />
-        <Button onAction="#sendMsg" text="send" />
+    <HBox fx:id="msgPanel" visible="false" managed="false">
+        <TextField fx:id="textField" promptText="input message" HBox.hgrow="ALWAYS"
+                   onAction="#sendMsg"/>
+        <Button text="send" onAction="#sendMsg"/>
     </HBox>
 
 </VBox>
